--- a/css/index.css
+++ b/css/index.css
@@ -46,3 +46,24 @@ footer {
   text-align: center;
 }
 /* End of footer styles */
+
+/* Image size */
+img {
+  width: 100%;
+  height: 200px;
+}
+/* End of image styles */
+
+/* Card size */
+.card {
+  width: 50%;
+  margin-top: 2%;
+}
+
+.my-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+/* End of card styles */
