I made the page of contact.

--- a/css/index.css
+++ b/css/index.css
@@ -1,52 +1,3 @@
-/* Variables */
-:root {
-  --color-1: #082040;
-  --color-2: #30698C;
-  --color-3: #468BA6;
-  --color-4: #8FCBD9;
-  --color-5: #DCEEF2;
-  --color-6: #FFFFFF;
-  --color-7: #000000;
-}
-/* End of variables */
-
-/* Styles of nav */
-nav {
-  background-color: var(--color-1);
-}
-
-.navbar {
-  padding: 1em;
-}
-
-a {
-  color: var(--color-6);
-}
-
-a:hover {
-  color: var(--color-3);
-}
-
-.fa-bars {
-  color: var(--color-6);
-}
-/* End of nav styles */
-
-/* Styles of main */
-main {
-  background-color: var(--color-5);
-}
-/* End of main styles */
-
-/* Styles of footer */
-footer {
-  background-color: var(--color-1);
-  color: var(--color-6);
-  padding: 1em;
-  text-align: center;
-}
-/* End of footer styles */
-
 /* Image size */
 img {
   width: 100%;
@@ -54,7 +5,7 @@ img {
 }
 /* End of image styles */
 
-/* Card size */
+/* Styles of the card */
 .card {
   width: 50%;
   margin-top: 2%;
