--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,9 +10,14 @@ No media query for `xs` since this is the default in Bootstrap
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   /* Image size */
-  img {
+  .my-picture {
     width: 40%;
-    height: 225px;
+    height: 250px;
+  }
+
+  img {
+    width: 80%;
+    height: 250px;
   }
   /* End of image styles */
 }
